adding in to device

--- a/FirstModelAttempt.ipynb
+++ b/FirstModelAttempt.ipynb
@@ -339,7 +339,7 @@
     "        optimizer.zero_grad()\n",
     "\n",
     "        # compute reconstructions\n",
-    "        outputs = model(batch_features)\n",
+    "        outputs = model(batch_features).to(device).float()\n",
     "\n",
     "        # compute training reconstruction loss\n",
     "        train_loss = criterion(outputs, batch_features)\n",
